--- a/public/style.css
+++ b/public/style.css
@@ -22,3 +22,19 @@
 .carousel-inner {
   height: 569px;
 }
+
+.brand-logo {
+  width: 200px;
+  height: 50px;
+  background-image: url("./Assets/milk-maid_logo.png");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  border: 1px solid #FFF;
+  border-radius: 30px;
+  /* box-shadow: 3px 3px 3px 3px #888888; */
+}
+
+.brand-logo:hover {
+  opacity: 0.5;
+}
