--- a/public/style.css
+++ b/public/style.css
@@ -1,7 +1,14 @@
+/* --------------------------NAV SECTION & CAROUSEL---------------------------- */
 #navSection {
   width: 100%;
-  height: 100vh;
-  background-color: lightcyan;
+  /* background-color: lightcyan; */
+}
+
+@media (min-width: 768px) {
+  #navSection {
+    width: 100%;
+    height: 100vh;
+  }
 }
 
 .navbar-brand {
@@ -10,18 +17,69 @@
   font-size: 28px;
 }
 
-#carouselcontainer {
-  width: 100%;   
+/* #carouselcontainer {
+  width: 100%; 
+  max-height: 450px; 
+} */
+
+@media (min-width: 768px) {
+  #carouselcontainer {
+    width: 100%; 
+    max-height: 600px;
+    height: 450px;
+  }
 }
 
-.carouselImg {
-  max-width: 100%;
-  max-height: 100%;
+/* @media only screen and (max-width: 300px) {
+  #carouselcontainer {
+    width: 100%; 
+    max-height: 200px;  
+    background-color: red;
+  }
+} */
+
+@media only screen 
+  and (min-width: 320px) 
+  and (max-width: 568px)
+  and (-webkit-min-device-pixel-ratio: 2) {
+    #carouselcontainer {
+      width: 100%; 
+      max-height: 200px;  
+      background-color: red;
+    }
 }
 
-.carousel-inner {
-  height: 569px;
+@media (min-width: 768px) {
+  .carousel-inner {
+    max-width: 100%;
+    /* max-height: 600px; */
+    height: 450px;
+  }
 }
+/* @media only screen and(max-width: 300px) {
+  .carousel-inner {
+    max-width: 100%;
+    max-height: 100%;
+    height: 200px;
+  }
+} */
+
+@media only screen 
+  and (min-width: 320px) 
+  and (max-width: 568px)
+  and (-webkit-min-device-pixel-ratio: 2) {
+    .carousel-inner {
+      max-width: 100%;
+      max-height: 100%;
+      height: 200px;
+    }
+}
+.carousel-indicators {
+  align-self: baseline
+}
+/* .carousel-inner {
+  height: 400px;
+} */
 
 .brand-logo {
   width: 200px;
@@ -32,9 +90,63 @@
   background-repeat: no-repeat;
   border: 1px solid #FFF;
   border-radius: 30px;
-  /* box-shadow: 3px 3px 3px 3px #888888; */
 }
 
 .brand-logo:hover {
   opacity: 0.5;
 }
+
+/* ------------------------------------MAIN-CONTENT SECTION------------------------------ */
+
+#main-content-area {
+  width: 100%;
+}
+
+#milk {
+  background-color: gainsboro;
+  height: 100px;
+  width: 100%;
+  text-align: center;
+  line-height: 6.5rem;
+}
+
+#curd {
+  background-color: paleturquoise;
+  height: 100px;
+  width: 100%;
+  text-align: center;
+  line-height: 6.5rem;
+}
+
+#butter {
+  background-color: burlywood;
+  height: 100px;
+  width: 100%;
+  text-align: center;
+  line-height: 6.5rem;
+}
+
+#paneer {
+  background-color: yellowgreen;
+  height: 100px;
+  width: 100%;
+  text-align: center;
+  line-height: 6.5rem;
+}
+
+#masterPane div {
+  margin-bottom: 10px;
+}
+
+#masterPane {
+  flex-direction: column;
+  margin-left:0px;
+  margin-top: 20px;
+  width: 200px;
+}
+
+#main-content-area {
+  justify-content: flex-start;
+}
+
+
