--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,7 @@
+body {
+  overflow-x: hidden;
+}
+
 /* --------------------------NAV SECTION & CAROUSEL---------------------------- */
 #navSection {
   width: 100%;
@@ -51,7 +55,6 @@
 @media (min-width: 768px) {
   .carousel-inner {
     max-width: 100%;
-    /* max-height: 600px; */
     height: 450px;
   }
 }
@@ -62,6 +65,12 @@
     height: 200px;
   }
 } */
+
+.fa-shopping-cart {
+  color: #F30007;
+  border-bottom: 2px solid #F30007;
+  font-size: 1.8em;
+}
 
 @media only screen 
   and (min-width: 320px) 
@@ -135,12 +144,21 @@
 }
 
 #masterPane {
-  display: inline-block;
-  flex-direction: column;
-  margin-left:100px;
+  /* display: inline-block; */
+  /* flex-direction: column; */
+  margin-left:21%;
   margin-top: 20px;
+  margin-right: 0px;
   width: 200px;
-  float: left;
+  /* float: left; */
+  padding-left: 5.5%;
+}
+
+.master-container {
+  width: 100%;
+  align-content: center;
+  align-items: center;
+
 }
 
 #masterPane div:hover {
@@ -148,20 +166,29 @@
 }
 
 #main-content-area {
-  justify-content: flex-start;
+  /* justify-content: flex-start; */
 }
 
 /* ---------------------------------DETAIL-PANE------------------------------ */
+.detail-pane {
+  border: 1px solid #ccc;
+  width: 100%;
+  margin-top: 2%;
+}
 
-#detailPane {
+.detail-container {
+  margin-left: 5%;
+}
+
+/* #detailPane {
   height: 450px;
   width: 900px;
   margin-left: 50px;
   margin-top: 20px;
-  border: 1px solid #999;
+  border-left: 1px solid #999;
   display: inline-block;
   float: left;
-}
+} */
 
 
 /* ---------------------------------LOADING-INDICATOR------------------------------ */
@@ -172,7 +199,7 @@
 }
 
 .loading-indicator-content {
-  height: 45px;
+  height: 110px;
 }
 
 .blob {
@@ -227,4 +254,60 @@
   50% { transform: translateX(4.5rem) scale(0.6); }
   75% { transform: translateX(7.5rem) scale(0.5); }
   95% { transform: translateX(0rem) scale(1); }
+}
+
+/* ---------------------------------Content-Cards------------------------------ */
+
+.card-deck {
+  width: 100%;
+  align-items: center;
+  margin-left: 0px;
+  justify-content: center;
+}
+
+.card-img-top {
+  height: 200px;
+}
+
+.card-body {
+  height: 120px;
+  /* padding-top: 20px;
+  margin-bottom: 30px; */
+}
+
+.price {
+  font-size: 22px;
+  color: crimson;
+  font-weight: bold;
+}
+
+.fa-plus, .fa-minus, .card-cart {
+  color: crimson;
+  /* font-weight: bold; */
+}
+
+.fa-plus:hover, .fa-minus:hover, .card-cart:hover {
+  cursor: pointer;
+  font-size: 18px;
+  /* font-weight: bold; */
+}
+
+.card-cart:hover {
+  background-color: crimson;
+  color: white;
+}
+
+.card-quantity {
+  padding-left: 4px;
+  padding-right: 4px;
+  font-size: 19px;
+  font-weight: bold;
+}
+
+.card-quant-col {
+  border-right: 2px solid rgb(220, 20, 60, 0.4);
+}
+
+.card {
+  max-width: 300px;
 }
