Fixing detail Pane for overlappings

--- a/handlebars/cards.hbs
+++ b/handlebars/cards.hbs
@@ -4,10 +4,10 @@
 <div class="card">
 	<img class="card-img-top" src="./Assets/milk.jpg" alt="Card image cap">
 	<div class="card-body">
-		<h5 class="card-title">{{../brand}}</h5>
+		<h5 class="card-title">{{../brand}} {{../name}} {{this}}</h5>
 		<span class="price">
 			<i class="fa fa-inr" aria-hidden="true"></i>
-			<span class="card-text"></span>{{this}}</span>
+			<span class="card-text"></span>100</span>
 		</div>
 		<div class="card-footer">
 			<div class="row">
